:bug: Fix broken styles for examples from your code section

--- a/styles/content.less
+++ b/styles/content.less
@@ -362,14 +362,14 @@
   }
 
   section.patterns,
-  section.usages-from-your-code {
+  section.examples-from-your-code {
     .kite-pro-features {
       font-size: 1.2em;
       padding-left: @component-padding;
     }
   }
 
-  section.usages-from-your-code {
+  section.examples-from-your-code {
     .section-content {
       margin: 0;
 
